--- a/mycss.scss
+++ b/mycss.scss
@@ -1,11 +1,11 @@
 /*-- scss:defaults --*/
 
-$primary: #29850D !default;
+$primary: #6B6969 !default;
 
 /*-- scss:rules --*/
 
 .sidebar-title {
-  color: #29850D;
+  color: #6B6969;
 }
 
 img.quarto-cover-image {
@@ -22,19 +22,32 @@ div {
 h2 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
-h3 { margin-top: 1.5em; font-size: 1.2rem; }
-h4 { margin-top: 1.5em; font-size: 1.1rem; }
-h5 { margin-top: 1.5em; font-size: 1rem; }
+h3 { margin-top: 1.3em; font-size: 1.1rem; }
+h4 { margin-top: 1.3em; font-size: 1.0rem; }
+h5 { margin-top: 1.3em; font-size: 0.9rem; }
 
 h1, h2, h3, h4, h5 {
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .quarto-section-identifier {
   color: #6C6C6C;
   font-weight: normal;
+}
+
+code {
+  color: #DE1010;
+}
+
+code a:any-link {
+  text-decoration: underline;
+  text-decoration-color: #ccc;
+}
+
+pre {
+  background-image: linear-gradient(160deg,#f8f8f8 0,#f1f1f1 100%);
 }
 
 
